docs: add logo and fix spacing on header

--- a/docs/_themes/cakephp/static/css/app.css
+++ b/docs/_themes/cakephp/static/css/app.css
@@ -12,3 +12,7 @@
 div.related {
   background-color: #565656;
 }
+.logo-cake img {
+  height:35px;
+  width: 35px;
+}
